Added template code

--- a/alison_wonderland.html
+++ b/alison_wonderland.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Evan Lewis - Vindata - Some Artists</title>
+        <title>Evan Lewis - Alison Wonderland - Some Artists</title>
         <link rel="stylesheet" href="main.css">
     </head>
     
@@ -22,7 +22,7 @@
 		      </ul>
 	      </nav>
 	      <main>
-		      <h1>ASTR</h1>
+		      <h1>Alison Wonderland</h1>
 		      <p>ASTR is a duo that lives, works and writes music in New York City. After meeting three years ago in a Manhattan yoga class, they discovered they shared a musical and artistic sensibility informed by cinema noire, Miami Vice and urban dreamscapes. ASTR was soon born.</p>
 
 					<p>Zoe is a New York native and former major label refuge. After a hiatus from music to explore the world via spirituality she met Adam, a recovering vinyl addict with a penchant for 60's / 70's cinema scores, Disco, and the fingers for anything with keys (vintage synths, guitar and bass).</p>
