--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	      </header>
 	      <main id="index">
 		      <section>
-			      <a href="allison_wonderland.html"><article>	      	      
+			      <a href="alison_wonderland.html"><article>	      	      
 			      	<p>Some Artists is a site showing off some of my favorite music artists.</p>
 			      </article></a>
 			      <a href="astr.html"><article>	      	      
