--- a/astr.html
+++ b/astr.html
@@ -2,24 +2,31 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Evan Lewis - Artists</title>
+        <title>Evan Lewis - ASTR - Some Artists</title>
         <link rel="stylesheet" href="main.css">
     </head>
     
     <body>
 	      <header>
-		      <h1>Artists</h1>
+		      <h1>Some Artists</h1>
 	      </header>
 	      <nav>
 			    <ul>
 				    <li><a href="index.html">Home</a></li>
+				    <li><a href="allison_wonderland.html">Allison Wonderland</a></li>
 				    <li><a href="astr.html">ASTR</a></li>
 					  <li><a href="flume.html">Flume</a></li>
 					  <li><a href="ganz.html">Ganz</a></li>
 					  <li><a href="purity_ring.html">Purity Ring</a></li>
+					  <li><a href="vindata.html">Vindata</a></li>
 		      </ul>
 	      </nav>
 	      <main>
+		      <h1>ASTR</h1>
+		      <p>ASTR is a duo that lives, works and writes music in New York City. After meeting three years ago in a Manhattan yoga class, they discovered they shared a musical and artistic sensibility informed by cinema noire, Miami Vice and urban dreamscapes. ASTR was soon born.</p>
+
+					<p>Zoe is a New York native and former major label refuge. After a hiatus from music to explore the world via spirituality she met Adam, a recovering vinyl addict with a penchant for 60's / 70's cinema scores, Disco, and the fingers for anything with keys (vintage synths, guitar and bass).</p>
+		      
 		      <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/87895411&amp;color=7db4ae&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
 	      </main>
     </body>
