Added images and profile information

--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
 	      <main id="index">
 		      <section>
 			      <a href="alison_wonderland.html"><article>	      	      
-			      	<p>Some Artists is a site showing off some of my favorite music artists.</p>
+			      	<h1>Alison Wonderland</h1>
 			      </article></a>
 			      <a href="astr.html"><article>	      	      
-			      	<p>Some Artists is a site showing off some of my favorite music artists.</p>
+			      	<h1>ASTR</h1>
 			      </article></a>
 			      <a href="flume.html"><article>	      	      
-			      	<p>Some Artists is a site showing off some of my favorite music artists.</p>
+			      	<h1>Flume</h1>
 			      </article></a>
-			      <a href="ganz.html"><article>	      	      
-			      	<p>Some Artists is a site showing off some of my favorite music artists.</p>
+			      <a href="hudson_mohawke.html"><article>	      	      
+			      	<h1>Hudson Mohawke</h1>
 			      </article></a>
 						<a href="purity_ring.html"><article>	      	      
-			      	<p>Some Artists is a site showing off some of my favorite music artists.</p>
+			      	<h1>Purity Ring</h1>
 			      </article></a>
 			      <a href="vindata.html"><article>	      	      
-			      	<p>Some Artists is a site showing off some of my favorite music artists.</p>
+			      	<h1>Vindata</h1>
 			      </article></a>
 		      </section>
 	      </main>
