--- a/vindata.html
+++ b/vindata.html
@@ -16,18 +16,16 @@
 				    <li><a href="alison_wonderland.html">Alison Wonderland</a></li>
 				    <li><a href="astr.html">ASTR</a></li>
 					  <li><a href="flume.html">Flume</a></li>
-					  <li><a href="ganz.html">Ganz</a></li>
+					  <li><a href="hudson_mohawke.html">Hudson Mohawke</a></li>
 					  <li><a href="purity_ring.html">Purity Ring</a></li>
 					  <li><a href="vindata.html">Vindata</a></li>
 		      </ul>
 	      </nav>
 	      <main>
-		      <h1>ASTR</h1>
-		      <p>ASTR is a duo that lives, works and writes music in New York City. After meeting three years ago in a Manhattan yoga class, they discovered they shared a musical and artistic sensibility informed by cinema noire, Miami Vice and urban dreamscapes. ASTR was soon born.</p>
-
-					<p>Zoe is a New York native and former major label refuge. After a hiatus from music to explore the world via spirituality she met Adam, a recovering vinyl addict with a penchant for 60's / 70's cinema scores, Disco, and the fingers for anything with keys (vintage synths, guitar and bass).</p>
+		      <h1>Vindata</h1>
+		      <p>Vindata is the brainchild of Branden Ratcliff and Jared Poythress based in Los Angeles, California. Blending rugged hip hop beats with deep r&b passions, and indie-pop sensibilities; the pair are on a mission to expand how we define dance music.</p>
 		      
-		      <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/87895411&amp;color=7db4ae&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+		      <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/215563719&amp;color=2e5f56&amp;auto_play=false&amp;hide_related=true&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false"></iframe>
 	      </main>
     </body>
           
