--- a/alison_wonderland.html
+++ b/alison_wonderland.html
@@ -16,18 +16,17 @@
 				    <li><a href="alison_wonderland.html">Alison Wonderland</a></li>
 				    <li><a href="astr.html">ASTR</a></li>
 					  <li><a href="flume.html">Flume</a></li>
-					  <li><a href="ganz.html">Ganz</a></li>
+					  <li><a href="hudson_mohawke.html">Hudson Mohawke</a></li>
 					  <li><a href="purity_ring.html">Purity Ring</a></li>
 					  <li><a href="vindata.html">Vindata</a></li>
 		      </ul>
 	      </nav>
 	      <main>
 		      <h1>Alison Wonderland</h1>
-		      <p>ASTR is a duo that lives, works and writes music in New York City. After meeting three years ago in a Manhattan yoga class, they discovered they shared a musical and artistic sensibility informed by cinema noire, Miami Vice and urban dreamscapes. ASTR was soon born.</p>
-
-					<p>Zoe is a New York native and former major label refuge. After a hiatus from music to explore the world via spirituality she met Adam, a recovering vinyl addict with a penchant for 60's / 70's cinema scores, Disco, and the fingers for anything with keys (vintage synths, guitar and bass).</p>
-		      
-		      <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/87895411&amp;color=7db4ae&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+		      <p>Alex Sholler, better known by her stage name Alison Wonderland, is a Sydney-based DJ and producer signed to EMI Music Australia, which is part of Universal Music Australia. She initially trained as a classical musician, and is a trained cellist. In 2014 she embarked on a national tour playing in warehouses across Australia. Wonderland's debut album, Run, was released on 20 March 2015.</p>
+		      <p>After signing with EMI music Australia, Alison Wonderland gained popularity after her debut single "Get Ready," which features Sydney duo Fishing, was released on January 1, 2013. Soon after on June 27, 2014, her debut EP "Calm Down" was released and peaked at 38 on the ARIA chart, which preceded with singles "I Want U" and "Cold". "I Want U" peaked at 38 on the ARIA Charts as well as topping the Hype Machine charts, and subsequently became her biggest hit until her single "Run." The Extended Play was praised by Major Lazer member Diplo and Annie Mac.</p>
+		      <p>Alison Wonderland was nominated for two ARIA awards in 2015, Best Dance Release (for the single "Run") and Best Video (for "U Don't Know" featuring Wayne Coyne). The latter was in a category that was publicly voted upon. She was one of eight nominees to gain exactly two nominations. Other nominees included The Veronicas, 5 Seconds Of Summer, the Australian Brandenburg Orchestra, Meg Mac, and Peking Duk.</p>
+		      <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/226522238&amp;color=000000&amp;auto_play=false&amp;hide_related=true&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false"></iframe>
 	      </main>
     </body>
           
