--- a/astr.html
+++ b/astr.html
@@ -13,10 +13,10 @@
 	      <nav>
 			    <ul>
 				    <li><a href="index.html">Home</a></li>
-				    <li><a href="allison_wonderland.html">Allison Wonderland</a></li>
+				    <li><a href="alison_wonderland.html">Alison Wonderland</a></li>
 				    <li><a href="astr.html">ASTR</a></li>
 					  <li><a href="flume.html">Flume</a></li>
-					  <li><a href="ganz.html">Ganz</a></li>
+					  <li><a href="hudson_mohawke.html">Hudson Mohawke</a></li>
 					  <li><a href="purity_ring.html">Purity Ring</a></li>
 					  <li><a href="vindata.html">Vindata</a></li>
 		      </ul>
@@ -27,7 +27,7 @@
 
 					<p>Zoe is a New York native and former major label refuge. After a hiatus from music to explore the world via spirituality she met Adam, a recovering vinyl addict with a penchant for 60's / 70's cinema scores, Disco, and the fingers for anything with keys (vintage synths, guitar and bass).</p>
 		      
-		      <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/87895411&amp;color=7db4ae&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+		      <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/87895411&amp;color=7db4ae&amp;auto_play=false&amp;hide_related=true&amp;show_comments=false&amp;show_user=false&amp;show_reposts=false"></iframe>
 	      </main>
     </body>
           
