--- a/flume.html
+++ b/flume.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Evan Lewis - Flume - Some Artists</title>
-        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="artist.css">
     </head>
     
     <body>
@@ -12,18 +12,20 @@
 	      </header>
 	      <nav>
 			    <ul>
-				    <li><a href="index.html">Home</a></li>
-				    <li><a href="alison_wonderland.html">Alison Wonderland</a></li>
-				    <li><a href="astr.html">ASTR</a></li>
-					  <li><a href="flume.html">Flume</a></li>
-					  <li><a href="hudson_mohawke.html">Hudson Mohawke</a></li>
-					  <li><a href="purity_ring.html">Purity Ring</a></li>
-					  <li><a href="vindata.html">Vindata</a></li>
+				    <a href="index.html"><li>Home</li></a>
+				    <a href="alison_wonderland.html"><li>Alison Wonderland</li></a>
+				    <a href="astr.html"><li>ASTR</li></a>
+					  <a href="flume.html"><li>Flume</li></a>
+					  <a href="hudson_mohawke.html"><li>Hudson Mohawke</li></a>
+					  <a href="purity_ring.html"><li>Purity Ring</li></a>
+					  <a href="vindata.html"><li>Vindata</li></a>
 		      </ul>
 	      </nav>
 	      <main>
 		      <h1>Flume</h1>
-		      <p>Harley Edward Streten, better known by his stage name Flume, is an Australian electronic music producer. His debut self-titled album was released on 9 November 2012, which peaked at No. 1 on the ARIA Albums Chart. Its lead single, "Holdin On", reached the top 20 on the related ARIA Singles Chart as well as #4 on Triple J's Hottest 100 Countdown in 2013. The album and single provided Flume with four wins and four nominations at the ARIA Music Awards of 2013. Wins included Best Male Artist, Breakthrough Artist – Release, Best Dance Release, and Producer of the Year.On 5 January 2016 Flume shared details of his forthcoming sophomore album, Skin. The first single "Never Be Like You" reached number one in Australia in February 2016.Flume has remixed the likes of Lorde, Sam Smith, Arcade Fire and Disclosure.CareerHarley Edward Streten was born on 5 November 1991 and grew up on the Northern Beaches of Sydney, where he still resides. He began creating music at about the age of thirteen, with a basic production disc that was packaged in a box of cereal. In 2010, Streten began producing house music under his initials, HEDS. He created two tracks "Flow" and "Fizz", in addition to several remixes.</p>
+          <img src="img/artwork/smoke_and_retribution.jpg">
+		      <p>&nbsp;&nbsp;&nbsp;&nbsp;Harley Edward Streten, better known by his stage name Flume, is an Australian electronic music producer. His debut self-titled album was released on 9 November 2012, which peaked at No. 1 on the ARIA Albums Chart. Its lead single, "Holdin On", reached the top 20 on the related ARIA Singles Chart as well as #4 on Triple J's Hottest 100 Countdown in 2013. The album and single provided Flume with four wins and four nominations at the ARIA Music Awards of 2013. Wins included Best Male Artist, Breakthrough Artist – Release, Best Dance Release, and Producer of the Year.</p>
+		      <p>&nbsp;&nbsp;&nbsp;&nbsp;On 5 January 2016 Flume shared details of his forthcoming sophomore album, Skin. The first single "Never Be Like You" reached number one in Australia in February 2016.Flume has remixed the likes of Lorde, Sam Smith, Arcade Fire and Disclosure.CareerHarley Edward Streten was born on 5 November 1991 and grew up on the Northern Beaches of Sydney, where he still resides. He began creating music at about the age of thirteen, with a basic production disc that was packaged in a box of cereal. In 2010, Streten began producing house music under his initials, HEDS. He created two tracks "Flow" and "Fizz", in addition to several remixes.</p>
 		      
 		      <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/96379023&amp;color=bababa&amp;auto_play=false&amp;hide_related=true&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false"></iframe>
 	      </main>
