--- a/index.html
+++ b/index.html
@@ -8,27 +8,29 @@
     
     <body>
 	      <header>
-		      <h1>Some Artists</h1>
-		      <h2>Some Artists is a site that displays some of my favorite music artists.</h2>
+  	      <div id="innerHeader">
+		        <h1>Some Artists</h1>
+            <h2>Some Artists is a site that displays some of my favorite music artists</h2>
+  	      </div>
 	      </header>
 	      <main id="index">
 		      <section>
-			      <a href="alison_wonderland.html"><article>	      	      
+			      <a href="alison_wonderland.html"><article id="alisonWonderland">
 			      	<h1>Alison Wonderland</h1>
 			      </article></a>
-			      <a href="astr.html"><article>	      	      
+			      <a href="astr.html"><article id="astr">	      	      
 			      	<h1>ASTR</h1>
 			      </article></a>
-			      <a href="flume.html"><article>	      	      
+			      <a href="flume.html"><article id="flume">	      	      
 			      	<h1>Flume</h1>
 			      </article></a>
-			      <a href="hudson_mohawke.html"><article>	      	      
+			      <a href="hudson_mohawke.html"><article id="hudsonMohawke">	      	      
 			      	<h1>Hudson Mohawke</h1>
 			      </article></a>
-						<a href="purity_ring.html"><article>	      	      
+						<a href="purity_ring.html"><article id="purityRing">	      	      
 			      	<h1>Purity Ring</h1>
 			      </article></a>
-			      <a href="vindata.html"><article>	      	      
+			      <a href="vindata.html"><article id="vindata">	      	      
 			      	<h1>Vindata</h1>
 			      </article></a>
 		      </section>
