--- a/astr.html
+++ b/astr.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Evan Lewis - ASTR - Some Artists</title>
-        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="artist.css">
     </head>
     
     <body>
@@ -12,20 +12,20 @@
 	      </header>
 	      <nav>
 			    <ul>
-				    <li><a href="index.html">Home</a></li>
-				    <li><a href="alison_wonderland.html">Alison Wonderland</a></li>
-				    <li><a href="astr.html">ASTR</a></li>
-					  <li><a href="flume.html">Flume</a></li>
-					  <li><a href="hudson_mohawke.html">Hudson Mohawke</a></li>
-					  <li><a href="purity_ring.html">Purity Ring</a></li>
-					  <li><a href="vindata.html">Vindata</a></li>
+				    <a href="index.html"><li>Home</li></a>
+				    <a href="alison_wonderland.html"><li>Alison Wonderland</li></a>
+				    <a href="astr.html"><li>ASTR</li></a>
+					  <a href="flume.html"><li>Flume</li></a>
+					  <a href="hudson_mohawke.html"><li>Hudson Mohawke</li></a>
+					  <a href="purity_ring.html"><li>Purity Ring</li></a>
+					  <a href="vindata.html"><li>Vindata</li></a>
 		      </ul>
 	      </nav>
 	      <main>
 		      <h1>ASTR</h1>
-		      <p>ASTR is a duo that lives, works and writes music in New York City. After meeting three years ago in a Manhattan yoga class, they discovered they shared a musical and artistic sensibility informed by cinema noire, Miami Vice and urban dreamscapes. ASTR was soon born.</p>
-
-					<p>Zoe is a New York native and former major label refuge. After a hiatus from music to explore the world via spirituality she met Adam, a recovering vinyl addict with a penchant for 60's / 70's cinema scores, Disco, and the fingers for anything with keys (vintage synths, guitar and bass).</p>
+		      <img src="img/artwork/homecoming.jpg">
+		      <p>&nbsp;&nbsp;&nbsp;&nbsp;ASTR is a duo that lives, works and writes music in New York City. After meeting three years ago in a Manhattan yoga class, they discovered they shared a musical and artistic sensibility informed by cinema noire, Miami Vice and urban dreamscapes. ASTR was soon born.</p>
+					<p>&nbsp;&nbsp;&nbsp;&nbsp;Zoe is a New York native and former major label refuge. After a hiatus from music to explore the world via spirituality she met Adam, a recovering vinyl addict with a penchant for 60's / 70's cinema scores, Disco, and the fingers for anything with keys (vintage synths, guitar and bass).</p>
 		      
 		      <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/87895411&amp;color=7db4ae&amp;auto_play=false&amp;hide_related=true&amp;show_comments=false&amp;show_user=false&amp;show_reposts=false"></iframe>
 	      </main>
