--- a/hudson_mohawke.html
+++ b/hudson_mohawke.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Evan Lewis - Hudson Mohawke - Some Artists</title>
-        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="artist.css">
     </head>
     
     <body>
@@ -12,19 +12,20 @@
 	      </header>
 	      <nav>
 			    <ul>
-				    <li><a href="index.html">Home</a></li>
-				    <li><a href="alison_wonderland.html">Alison Wonderland</a></li>
-				    <li><a href="astr.html">ASTR</a></li>
-					  <li><a href="flume.html">Flume</a></li>
-					  <li><a href="hudson_mohawke.html">Hudson Mohawke</a></li>
-					  <li><a href="purity_ring.html">Purity Ring</a></li>
-					  <li><a href="vindata.html">Vindata</a></li>
+				    <a href="index.html"><li>Home</li></a>
+				    <a href="alison_wonderland.html"><li>Alison Wonderland</li></a>
+				    <a href="astr.html"><li>ASTR</li></a>
+					  <a href="flume.html"><li>Flume</li></a>
+					  <a href="hudson_mohawke.html"><li>Hudson Mohawke</li></a>
+					  <a href="purity_ring.html"><li>Purity Ring</li></a>
+					  <a href="vindata.html"><li>Vindata</li></a>
 		      </ul>
 	      </nav>
 	      <main>
 		      <h1>Hudson Mohawke</h1>
-		      <p>Hudson Mohawke (Ross Birchard) has been on a meteoric rise the last few years, working with some of the biggest names in hip hop, pop and dance music but everything started in a bedroom in Glasgow when he was barely a teenager. From age 15 he was an award winning scratch DJ producing happy hardcore on cracked software - he came to define a generation of electronic fusion producers but unlike many of his peers, Hudson has matured into a fully fledged contemporary hitmaker continually working to break the mold.</p>
-		      <p>Born of the underground club scene in the UK, ‘Hud Mo’ has been releasing music for the last 10 years, cultivating a formidable presence in the community. His US break-out came in 2012 with TNGHT, the collaborative project with fellow producer Lunice, which saw their production influence the A-list in rap and help reintroduce the US dance / EDM scene to Hip Hop as club music. In the two years following, Hudson has worked on releases from Drake, Kanye West, John Legend, Young Thug, Pusha-T, and Antony Hegarty.</p>
+		      <img src="img/artwork/satin_panthers.jpg">
+		      <p>&nbsp;&nbsp;&nbsp;&nbsp;Hudson Mohawke (Ross Birchard) has been on a meteoric rise the last few years, working with some of the biggest names in hip hop, pop and dance music but everything started in a bedroom in Glasgow when he was barely a teenager. From age 15 he was an award winning scratch DJ producing happy hardcore on cracked software - he came to define a generation of electronic fusion producers but unlike many of his peers, Hudson has matured into a fully fledged contemporary hitmaker continually working to break the mold.</p>
+		      <p>&nbsp;&nbsp;&nbsp;&nbsp;Born of the underground club scene in the UK, ‘Hud Mo’ has been releasing music for the last 10 years, cultivating a formidable presence in the community. His US break-out came in 2012 with TNGHT, the collaborative project with fellow producer Lunice, which saw their production influence the A-list in rap and help reintroduce the US dance / EDM scene to Hip Hop as club music. In the two years following, Hudson has worked on releases from Drake, Kanye West, John Legend, Young Thug, Pusha-T, and Antony Hegarty.</p>
 		      
 		      <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/197436142&amp;color=4c7b9f&amp;auto_play=false&amp;hide_related=true&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false"></iframe>
 	      </main>
