--- a/purity_ring.html
+++ b/purity_ring.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Evan Lewis - GANZ - Some Artists</title>
-        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="artist.css">
     </head>
     
     <body>
@@ -12,18 +12,20 @@
 	      </header>
 	      <nav>
 			    <ul>
-				    <li><a href="index.html">Home</a></li>
-				    <li><a href="alison_wonderland.html">Alison Wonderland</a></li>
-				    <li><a href="astr.html">ASTR</a></li>
-					  <li><a href="flume.html">Flume</a></li>
-					  <li><a href="hudson_mohawke.html">Hudson Mohawke</a></li>
-					  <li><a href="purity_ring.html">Purity Ring</a></li>
-					  <li><a href="vindata.html">Vindata</a></li>
+				    <a href="index.html"><li>Home</li></a>
+				    <a href="alison_wonderland.html"><li>Alison Wonderland</li></a>
+				    <a href="astr.html"><li>ASTR</li></a>
+					  <a href="flume.html"><li>Flume</li></a>
+					  <a href="hudson_mohawke.html"><li>Hudson Mohawke</li></a>
+					  <a href="purity_ring.html"><li>Purity Ring</li></a>
+					  <a href="vindata.html"><li>Vindata</li></a>
 		      </ul>
 	      </nav>
 	      <main>
 		      <h1>Purity Ring</h1>
-		      <p>The chilly electro-pop project of Corin Roddick and Megan James, Purity Ring began when the two were in Canadian indie rock act Gobble Gobble (which later became Born Gold). While the band was on tour, Roddick and James grew increasingly inspired by the sounds of contemporary R&B and wanted to make music reflecting that. Their first song, "Ungirthed," arrived in January 2011 to critical acclaim, and Purity Ring eventually signed with 4AD Records. Shrines, the duo's debut album, was released in July 2012. The following year, Purity Ring collaborated with Danny Brown on the track "25 Bucks." After touring in support of Shrines, Roddick and James began making new music, this time working together in person in Edmonton instead of collaborating online as they had on their debut. The results were 2015's Another Eternity, a dynamic, streamlined set of songs featuring more revealing lyrics from James and Roddick's hip-hop-inspired production.</p>
+		      <img src="img/artwork/shrines.jpg">
+		      <p>&nbsp;&nbsp;&nbsp;&nbsp;The chilly electro-pop project of Corin Roddick and Megan James, Purity Ring began when the two were in Canadian indie rock act Gobble Gobble (which later became Born Gold). While the band was on tour, Roddick and James grew increasingly inspired by the sounds of contemporary R&B and wanted to make music reflecting that. Their first song, "Ungirthed," arrived in January 2011 to critical acclaim, and Purity Ring eventually signed with 4AD Records. Shrines, the duo's debut album, was released in July 2012. The following year, Purity Ring collaborated with Danny Brown on the track "25 Bucks."</p>
+  		    <p>&nbsp;&nbsp;&nbsp;&nbsp;After touring in support of Shrines, Roddick and James began making new music, this time working together in person in Edmonton instead of collaborating online as they had on their debut. The results were 2015's Another Eternity, a dynamic, streamlined set of songs featuring more revealing lyrics from James and Roddick's hip-hop-inspired production.</p>
 		      
 		      <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/185834928&amp;color=fee5ce&amp;auto_play=false&amp;hide_related=true&amp;show_comments=false&amp;show_user=false&amp;show_reposts=false"></iframe>
 	      </main>
