--- a/vindata.html
+++ b/vindata.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Evan Lewis - Vindata - Some Artists</title>
-        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="artist.css">
     </head>
     
     <body>
@@ -12,18 +12,20 @@
 	      </header>
 	      <nav>
 			    <ul>
-				    <li><a href="index.html">Home</a></li>
-				    <li><a href="alison_wonderland.html">Alison Wonderland</a></li>
-				    <li><a href="astr.html">ASTR</a></li>
-					  <li><a href="flume.html">Flume</a></li>
-					  <li><a href="hudson_mohawke.html">Hudson Mohawke</a></li>
-					  <li><a href="purity_ring.html">Purity Ring</a></li>
-					  <li><a href="vindata.html">Vindata</a></li>
+				    <a href="index.html"><li>Home</li></a>
+				    <a href="alison_wonderland.html"><li>Alison Wonderland</li></a>
+				    <a href="astr.html"><li>ASTR</li></a>
+					  <a href="flume.html"><li>Flume</li></a>
+					  <a href="hudson_mohawke.html"><li>Hudson Mohawke</li></a>
+					  <a href="purity_ring.html"><li>Purity Ring</li></a>
+					  <a href="vindata.html"><li>Vindata</li></a>
 		      </ul>
 	      </nav>
 	      <main>
 		      <h1>Vindata</h1>
-		      <p>Vindata is the brainchild of Branden Ratcliff and Jared Poythress based in Los Angeles, California. Blending rugged hip hop beats with deep r&b passions, and indie-pop sensibilities; the pair are on a mission to expand how we define dance music.</p>
+		      <img src="img/artwork/through_time_and_space.jpg">
+		      <p>&nbsp;&nbsp;&nbsp;&nbsp;Vindata has sought out on a mission to expand how we define dance music. Their all-embracing electronic sound seems to balance rugged Hip Hop beats, with deep R&B passions, and Indie-Pop sensibilities. After notable underground success with their last EP "…For One To Follow" , Branden and Jared released a new EP titled "Through Time And Space…" , another piece of their discography puzzle depicting the human experience. This time around, they've crafted a 6 track journey through different perceptions of different realities. The final result is a cohesive body of energetic yet lush textures, polyrhythmic percussion, and soulful vocals.</p>
+          <p>&nbsp;&nbsp;&nbsp;&nbsp;In 2014, their single "All I Really Need" gained the interest of reputable tastemaker Skrillex, who brought them on his Fall Tour. The duo also played noteworthy festivals at TomorrowWorld, Hard Summer, Red Rocks, and Firefly Festival. Their music has gained the support of Flosstradamus, Zed's Dead, Skrillex, Sweater Beats, Gladiator, Branchez, Kastle, Arty, and more.</p>
 		      
 		      <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/215563719&amp;color=2e5f56&amp;auto_play=false&amp;hide_related=true&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false"></iframe>
 	      </main>
