--- a/astr.html
+++ b/astr.html
@@ -25,8 +25,7 @@
 		      <h1>ASTR</h1>
 		      <img src="img/artwork/homecoming.jpg">
 		      <p>&nbsp;&nbsp;&nbsp;&nbsp;ASTR is a duo that lives, works and writes music in New York City. After meeting three years ago in a Manhattan yoga class, they discovered they shared a musical and artistic sensibility informed by cinema noire, Miami Vice and urban dreamscapes. ASTR was soon born.</p>
-					<p>&nbsp;&nbsp;&nbsp;&nbsp;Zoe is a New York native and former major label refuge. After a hiatus from music to explore the world via spirituality she met Adam, a recovering vinyl addict with a penchant for 60's / 70's cinema scores, Disco, and the fingers for anything with keys (vintage synths, guitar and bass).</p>
-		      
+					<p>&nbsp;&nbsp;&nbsp;&nbsp;Zoe is a New York native and former major label refuge. After a hiatus from music to explore the world via spirituality she met Adam, a recovering vinyl addict with a penchant for 60's / 70's cinema scores, Disco, and the fingers for anything with keys (vintage synths, guitar and bass).</p><br>
 		      <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/87895411&amp;color=7db4ae&amp;auto_play=false&amp;hide_related=true&amp;show_comments=false&amp;show_user=false&amp;show_reposts=false"></iframe>
 	      </main>
     </body>
